sourceforge (2.6-0+12+) unstable; urgency=low

  * [Christian] Added a dump and restore option to install-db.sh
  * [Christian] Added themeable main page support 

 -- Christian Bayle <bayle@debian.org>  Mon,  8 Jul 2002 14:04:45 +0200

sourceforge (2.6-0+12) unstable; urgency=low

  * [Roland] Added support for local overloading of the default
    translation files.  See README.Custom for details.
  * [Roland] Applied Olafur's "Making DNS simpler" patch, with a few
    changes.
  * [Roland] Applied Soon-Son's patch #281 increasing internationalisation
    and the Korean translation.
  * [Roland] Split the package into no less than eleven subpackages.  This
    isolates different features into different packages, and it also paves
    the road to multi-host installations (that part is not done yet).
  * [Roland] To facilitate this splitting, a bit of magic was introduced.
    I hereby present DSF-Helper to the face of the world.  This script is
    inspired from dh_installdeb, and basically does a search-and-replace
    on template files.  This allows us to share bits of code (for
    maintainer scripts) or text (Debconf templates) between several
    packages without having to maintain consistency by hand.  The
    code/text is in one file, and is inserted in the appropriate files
    when the package is built.
  * [Roland] Cleaned debian/rules file a bit.
  * [Christian] Added box1_get_alt_row_style function in Layout.class that
    replace html_get_alt_row_color from html.php. This will help to solve
    problems with savannah themes. I also made the necessary changes in
    savannah styles
  * [Soon-Son] fixed bug # 148 (malformed part on dns.zone)
  * [Soon-Son] fixed bug # 431 (Number of public forum/msg are 0)
  * [Soon-Son] removed all links to nonexistent document
  * [Soon-Son] more i18n effort including patch # 283
  * [Soon-Son] removed dtd definition for bug # 120
  * [Christian] Repared trove map count